work with storage, storage_transaction, storage_turnover
